--- a/Artist/package.json
+++ b/Artist/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.0",
     "@tailwindcss/vite": "^4.1.17",
-    "axios": "^1.6.0",
+    "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.66.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.2",
     "tailwindcss": "^4.1.17"
   },
