--- a/music/package.json
+++ b/music/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@google/genai": "^1.31.0",
+    "@google/generative-ai": "^0.24.1",
     "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
